# secure-xgboost

./: .buildinfo  .gitignore  .gitmodules  .old.travis.yml  .travis.yml  API.md  CMakeLists.txt  README.md  about.html  build.html  genindex.html  get_started.html  index.html  lint.sh  objects.inv  parameter.html  py-modindex.html  requirements.txt  search.html  searchindex.js  troubleshoot.html
.github/workflows/: docs.yml  main.yml
_sources/: build.rst.txt
_sources/python/: index.rst.txt  python_intro.rst.txt
_sources/tutorials/: distributed.rst.txt  jupyter.rst.txt  outsourced.rst.txt  risecamp2020.rst.txt
cmake/: attestation.h.in
config/: gen-client.sh  gen-root.sh  gen-signer.sh  signer.crt  signer.pem  signer.pub  user1.crt  user1.pem  user2.crt  user2.pem
demo/: .gitignore
demo/c-api/: .gitignore  Makefile  README.md  c-api-demo.cc  publickey.crt
demo/data/: 1_2agaricus.txt.train  1train.enc  2_2agaricus.txt.train  2train.enc  agaricus.txt.test.enc  agaricus.txt.train.enc
demo/data/usercrts/: user1.crt
demo/data/userkeys/: public_user_1.pem
demo/obl-test/: .gitignore  xgboost
demo/osort-mem-trace/: .gitignore  README.md  gen_arr.sh  make.sh  profile_sorts.sh  sort_A.cc  sort_B.cc
demo/python/: securexboost.ipynb
demo/python/.ipynb_checkpoints/: e2e-demo-checkpoint.ipynb
demo/python/basic/: .gitignore  config  config.ini  secure-xgboost-demo.py
demo/quantile-mem-trace/: .gitignore  README.md  make.sh  profile_script.sh  test_A.cc  test_B.cc
demo/security-test/: Makefile  security-demo  security-demo.cc
doc/: about.rst  build.rst  conf.py  get_started.rst  index.rst  parameter.rst  requirements.txt  troubleshoot.rst
doc/python/: python_api.rst  python_intro.rst
doc/tutorials/: distributed.rst  index.rst  jupyter.rst  multiclient-distributed.rst  multiclient-outsourced.rst  outsourced-cluster.rst  outsourced.rst  risecamp2020.rst
enclave/: CMakeLists.txt  ecalls.cpp  ecalls_mc.cpp  private.pem  public.pem  xgboost.conf  xgboost.edl  xgboost_mc.edl
enclave/dmlc-core/src/: data.cc
enclave/dmlc-core/src/data/: csv_parser.h  libfm_parser.h  libsvm_parser.h  parser.h  text_parser.h
enclave/dmlc-core/src/io/: local_filesys.cc  single_file_split.h
enclave/include/: enclave_context.h
enclave/rabit/src/: allreduce_base.cc  allreduce_base.h  allreduce_robust-inl.h  allreduce_robust.cc  allreduce_robust.h  c_api.cc  certs.h  ssl_attestation.cc  ssl_attestation.h  ssl_socket.cc  ssl_socket.h  thread_local.h
enclave/src/: learner.cc  logging.cc
enclave/src/c_api/: c_api.cc  c_api_error.cc  c_api_mc.cc
enclave/src/common/: column_matrix.h  column_matrix_obl.h  common.cc  hist_util.cc  hist_util.h  hist_util_obl.cc  hist_util_obl.h  host_device_vector.cc  obl_primitives.cc  quantile.cc  quantile.h  quantile_obl.cc  quantile_obl.h  row_set.cc  row_set.h  row_set_obl.h  timer.h
enclave/src/data/: adapter.h  data.cc  simple_csr_source.cc  simple_dmatrix.cc  simple_dmatrix.h  sparse_page_raw_format.cc  sparse_page_source.cc  sparse_page_writer.cc
enclave/src/gbm/: gblinear.cc  gbtree.cc
enclave/src/linear/: coordinate_common.h  updater_coordinate.cc
enclave/src/metric/: elementwise_metric.cc  metric.cc  metric_common.h  multiclass_metric.cu
enclave/src/objective/: hinge.cu  multiclass_obj.cu  objective.cc  rank_obj.cc  regression_loss.h  regression_obj.cu
enclave/src/predictor/: cpu_predictor.cc  cpu_predictor_obl.cc
enclave/src/tree/: param.h  param_obl.h  split_evaluator.cc  tree_model.cc  tree_updater.cc  updater_colmaker.cc  updater_histmaker.cc  updater_prune.cc  updater_quantile_hist.cc  updater_quantile_hist.h  updater_quantile_hist_obl.cc  updater_quantile_hist_obl.h  updater_refresh.cc  updater_skmaker.cc  updater_sync.cc
host/: CMakeLists.txt
host/dmlc-core/: CMakeLists.txt
host/dmlc-core/cmake/: dmlc-config-version.cmake
host/dmlc-core/tracker/dmlc_tracker/: 2  _credentials.py  fxgb.proto  fxgb_pb2.py  fxgb_pb2_grpc.py  grpc_worker.py  opts.py  rpc.py  ssh.py  submit.py  tracker.py
host/dmlc-core/tracker/dmlc_tracker/credentials/: root.crt  server_cert.crt  server_cert.key
host/rabit/src/: allreduce_base.h  allreduce_robust.cc  c_api.cc  engine.cc  ocalls.cc
host/src/: CMakeLists.txt
host/src/c_api/: c_api.cc  c_api_error.cc  c_api_mc.cc
host/src/common/: quantile.h
include/dmlc/: base.h  base64.h  build_config_default.h  data.h  filesystem.h  logging.h  thread_local.h  timer.h
include/enclave/: attestation.h  crypto.h  enclave.h  obl_primitives.h
include/intrinsics/: ammintrin.h  emmintrin.h  fma4intrin.h  immintrin.h  nmmintrin.h  pmmintrin.h  smmintrin.h  tmmintrin.h  wmmintrin.h  x86intrin.h  xmmintrin.h  xopintrin.h
include/rabit/: serializable.h
include/xgboost/: base.h  c_api.h  c_api_mc.h  crypto.h  data.h  gbm.h  linear_updater.h  metric.h  objective.h  predictor.h  tree_model.h  tree_model_obl.h  tree_updater.h
python/: index.html  python_api.html  python_intro.html
python-package/: MANIFEST.in  prep_pip.sh  setup.py  setup_pip.py
python-package/securexgboost/: __init__.py  build-python.sh  compat.py  core.py  libpath.py  rabit.py  remote_server.py  training.py
rpc/: README.md  ndarray_pb2.py  remote_attestation_pb2.py  remote_attestation_pb2_grpc.py  rpc_utils.py
rpc/protos/: remote_attestation.proto
scripts/: README.md  gen-self-signed-ca.sh  gen-user1-cert.sh
tests/ci-build/: tidy.py
tests/python/: config.py  paths.py  regression_test_utilities.py  test_basic.py  test_basic_models.py  test_dmatrix.py  test_early_stopping.py  test_eval_metrics.py  test_interaction_contraints.py  test_linear.py  test_monotone_constraints.py  test_openmp.py  test_parse_tree.py  test_pickling.py  test_ranking.py  test_shap.py  test_survival.py  test_tracker.py  test_training_continuation.py  test_tree_regularization.py  test_updaters.py  testing.py
tests/rpc/: start_enclave.py  start_orchestrator.py  test_rpc.py
tests/travis/: run_test.sh  setup.sh
tutorials/: distributed.html  index.html  jupyter.html  multiclient-distributed.html  outsourced.html  risecamp2020.html
(+146 files in other folders)
